--- a/nodejs_loginapp/Dockerfile
+++ b/nodejs_loginapp/Dockerfile
@@ -2,7 +2,7 @@ FROM node:latest
 
 WORKDIR /home
 
-RUN wget https://github.com/cdr/code-server/releases/download/2.1698/code-server2.1698-vsc1.41.1-linux-x86_64.tar.gz \
+RUN wget -q https://github.com/cdr/code-server/releases/download/2.1698/code-server2.1698-vsc1.41.1-linux-x86_64.tar.gz \
   && tar -xvf code-server* \
   && mv code-server2.1698-vsc1.41.1-linux-x86_64 code-server \
   && rm -r *.tar.gz 
@@ -16,6 +16,8 @@ RUN npm install
 WORKDIR /home
 
 ENV PASS aditya
+
+VOLUME /home/node/profilephotos
 
 COPY docker-entrypoint.sh .
 
