Docker file update

--- a/digit_recognizer_app/Dockerfile
+++ b/digit_recognizer_app/Dockerfile
@@ -1,14 +1,14 @@
 FROM continuumio/miniconda3:latest
 
-RUN conda install -q -y opencv=3.4.2 flask=1.0.3 tensorflow=2.1.0
-
 WORKDIR /home
 
-COPY app .
+RUN conda install -q -y opencv=3.4.2 flask=1.0.3 tensorflow=2.1.0
+
+COPY app app
 
 VOLUME /home/app/stats
 
 EXPOSE 80
 
-RUN [ "python", "/home/app/app.py" ]
+CMD [ "python", "/home/app/app.py" ]
 
