add ner_pos_tagging app

--- a/digit_recognizer_app/Dockerfile
+++ b/digit_recognizer_app/Dockerfile
@@ -1,4 +1,4 @@
-FROM continuumio/miniconda3:latest
+FROM continuumio/miniconda3:4.8.2
 
 RUN conda install -q -y opencv=3.4.2 flask=1.0.3 tensorflow=2.1.0
 
