ner_pos_tagging app update

--- a/ner_pos_tagging_app/Dockerfile
+++ b/ner_pos_tagging_app/Dockerfile
@@ -2,10 +2,11 @@ FROM continuumio/miniconda3:4.8.2
 
 RUN conda install -q -y flask=1.0.3 tensorflow=2.1.0
 
-WORKDIR /home
+COPY app /home/app
 
-COPY app .
+WORKDIR /home/app
 
 EXPOSE 80
 
-RUN [ "python", "/home/app/app.py" ]
+CMD [ "python", "app.py" ]
+
