--- a/Caption Generator/tf_serving_caption_gen/Dockerfile
+++ b/Caption Generator/tf_serving_caption_gen/Dockerfile
@@ -1,3 +1,52 @@
+ARG TF_SERVING_VERSION=latest
+ARG TF_SERVING_BUILD_IMAGE=tensorflow/serving:${TF_SERVING_VERSION}-devel
 
+FROM ${TF_SERVING_BUILD_IMAGE} as build_image
+FROM ubuntu:18.04
 
-RUN wget https://bitbucket.org/adityajn105/my_saved_model/raw/81d59628ebd7d5ba64cf294a63951cea3fbcff9c/caption_generator.zip
+ARG TF_SERVING_VERSION_GIT_BRANCH=master
+ARG TF_SERVING_VERSION_GIT_COMMIT=head
+
+LABEL maintainer="gvasudevan@google.com"
+LABEL tensorflow_serving_github_branchtag=${TF_SERVING_VERSION_GIT_BRANCH}
+LABEL tensorflow_serving_github_commit=${TF_SERVING_VERSION_GIT_COMMIT}
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        wget \ 
+        unzip \
+        && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Install TF Serving pkg
+COPY --from=build_image /usr/local/bin/tensorflow_model_server /usr/bin/tensorflow_model_server
+
+# Expose ports
+# gRPC
+EXPOSE 8500
+
+# REST
+EXPOSE 8501
+
+# Set where models should be stored in the container
+ENV MODEL_BASE_PATH=/models
+RUN mkdir -p ${MODEL_BASE_PATH}
+
+RUN cd ${MODEL_BASE_PATH} && \
+	wget -q https://bitbucket.org/adityajn105/my_saved_model/raw/81d59628ebd7d5ba64cf294a63951cea3fbcff9c/caption_generator.zip && \
+	unzip caption_generator.zip && \
+	rm caption_generator.zip
+
+# The only required piece is the model name in order to differentiate endpoints
+ENV MODEL_NAME=caption_generator
+
+# Create a script that runs the model server so we can use environment variables
+# while also passing in arguments from the docker command line
+RUN echo '#!/bin/bash \n\n\
+tensorflow_model_server --port=8500 --rest_api_port=8501 \
+--model_name=${MODEL_NAME} --model_base_path=${MODEL_BASE_PATH}/${MODEL_NAME} \
+"$@"' > /usr/bin/tf_serving_entrypoint.sh \
+&& chmod +x /usr/bin/tf_serving_entrypoint.sh
+
+ENTRYPOINT ["/usr/bin/tf_serving_entrypoint.sh"]
